# liveliness

./: .env.example  CLAUDE.md  Caddyfile  PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml  generate-icons.js
backend/: Dockerfile  Dockerfile.prod  config.py  database.py  main.py  pyproject.toml
backend/api/: activities.py  ai_coach.py  deps.py  health_sync.py  nutrition.py  profile.py  statistics.py  training.py  weight_training.py
backend/models/: __init__.py  activity.py  health_metrics.py  nutrition.py  training_plan.py  user.py  weight_session.py
backend/services/: ai_coach.py  apple_health.py  fit_parser.py  garmin.py  nutrition.py  periodization.py  planner.py  training_load.py  weight_training.py
docs/: ios-shortcut-setup.md
frontend/: Dockerfile  Dockerfile.prod  next.config.mjs  next.config.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/activities/: page.tsx
frontend/app/coach/: page.tsx
frontend/app/nutrition/: page.tsx
frontend/app/offline/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/setup/: page.tsx
frontend/app/statistics/: page.tsx
frontend/app/training/: page.tsx
frontend/app/weights/: page.tsx
frontend/components/: InstallPrompt.tsx
frontend/components/activities/: SportBadge.tsx
frontend/components/dashboard/: StatCard.tsx
frontend/components/nav/: BottomNav.tsx  TopHeader.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  (+3 more)
frontend/lib/: api.ts  chart.ts  format.ts
frontend/public/: manifest.json
(+5 files in other folders)
