[project]
name = "liveliness-backend"
version = "0.1.0"
description = "Liveliness endurance sports coaching app backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.40",
    "garminconnect>=0.2",
    "fitparse>=1.2",
    "apscheduler>=3.10",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
]
